--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "devo": "nodemon server.js"
-   
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -23,5 +22,8 @@
     "mongoose": "^5.11.13",
     "morgan": "^1.10.0",
     "slugify": "^1.4.6"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.19"
   }
 }
