--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,10 @@
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "server.js"
+        "dest": "server.js",
+        "headers": {
+        "Access-Control-Allow-Origin": "*"
+      }
       }
     ]
   }
