--- a/vercel.json
+++ b/vercel.json
@@ -10,6 +10,7 @@
       {
         "src": "/(.*)",
         "dest": "server.js",
+        "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
         "headers": {
         "Access-Control-Allow-Origin": "*"
       }
